diseño de menu pantalla inicio

--- a/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
+++ b/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
@@ -19,7 +19,9 @@
         <div *ngIf="!mostrarInfo" class="min-h-full flex items-center justify-center">
             <div class="flex min-w-0 flex-auto flex-col mt-2 items-center justify-center h-full w-full">
                 <div class="relative flex justify-center items-center p-3 sm:p-5 md:p-8 w-full h-full">
+                    @if(heroCard.face === 'front'){
 
+                    }
                     <fuse-card class="flex flex-col max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh]"
                         [flippable]="true" #heroCard>
 
@@ -43,8 +45,81 @@
                                     <span class="text-3xl font-bold">{{ t('titulo-destinos') }}</span>
                                 </div>
 
-                                <div class="absolute bottom-10 transform flex flex-col gap-4 z-20">
-                                    <button
+
+                                <div class="absolute bottom-5 transform flex flex-col gap-4 z-[999]">
+                                    <h1 class="text-2xl font-bold text-white tracking-tight"></h1>
+
+                                    <div class="relative w-full mx-auto group">
+                                        <button
+                                            class="w-full bg-green-700 hover:bg-emerald-800 text-white px-8 py-5 rounded-full flex items-center justify-between shadow-2xl transition-all duration-300 transform group-hover:scale-[1.02]">
+                                            <span class="flex items-center gap-3 text-lg font-semibold">
+                                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                                    stroke-width="1.5" stroke="currentColor" class="size-6">
+                                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                                        d="M9 6.75V15m6-6v8.25m.503 3.498 4.875-2.437c.381-.19.622-.58.622-1.006V4.82c0-.836-.88-1.38-1.628-1.006l-3.869 1.934c-.317.159-.69.159-1.006 0L9.503 3.252a1.125 1.125 0 0 0-1.006 0L3.622 5.689C3.24 5.88 3 6.27 3 6.695V19.18c0 .836.88 1.38 1.628 1.006l3.869-1.934c.317-.159.69-.159 1.006 0l4.994 2.497c.317.158.69.158 1.006 0Z" />
+                                                </svg>
+
+                                                {{ t('selecciona-proxima-aventura') }}
+                                            </span>
+                                        </button>
+                                        <div
+                                            class="absolute bottom-full w-full left-0 right-0 mb-4 bg-white dark:bg-gray-800 rounded-[2rem] overflow-hidden dropdown-shadow opacity-0 translate-y-4 pointer-events-none group-focus-within:opacity-100 group-focus-within:translate-y-0 group-focus-within:pointer-events-auto transition-all duration-300 z-20 border border-white/20">
+                                            <div class="p-2">
+                                                <button
+                                                    class="group/item flex items-center gap-4 p-5 rounded-[1.5rem] transition-all duration-200"
+                                                    (click)=" cargarDestinos(1); showOverlay();">
+                                                    <div class="w-12 h-12 flex items-center justify-center
+         rounded-full overflow-hidden
+         text-primary transition-colors duration-200">
+                                                        <img class="w-full h-full object-cover"
+                                                            [src]="'images/flags/MX.svg'"
+                                                            [alt]="'Flag image for ' + lang">
+                                                    </div>
+                                                    <div class="text-left">
+                                                        <span
+                                                            class="block text-lg font-bold text-gray-800 dark:text-gray-100">{{
+                                                            t('destinos-nacionales') }}</span>
+                                                        <span class="text-sm text-gray-500 dark:text-gray-400">{{
+                                                            t('descubre-la-magia-de-mexico') }}</span>
+                                                    </div>
+                                                </button>
+                                                <button
+                                                    class="group/item flex items-center gap-4 p-5 rounded-[1.5rem] transition-all duration-200"
+                                                    (click)="showOverlay(); cargarDestinos(2)">
+                                                    <div class="w-12 h-12 flex items-center justify-center
+         rounded-full overflow-hidden
+         text-primary transition-colors duration-200">
+                                                        <img class="w-full h-full object-cover"
+                                                            [src]="'images/earth-icon.svg'"
+                                                            [alt]="'Flag image for ' + lang">
+                                                    </div>
+                                                    <div class="text-left">
+                                                        <span
+                                                            class="block text-lg font-bold text-gray-800 dark:text-gray-100">{{
+                                                            t('destinos-internacionales') }}</span>
+                                                        <span class="text-sm text-gray-500 dark:text-gray-400">{{
+                                                            t('explora-fronteras-lejanas') }}</span>
+                                                    </div>
+                                                </button>
+                                                <!-- <a class="group/item flex items-center gap-4 p-5 rounded-[1.5rem] transition-all duration-200"
+                                        href="#">
+                                        <div
+                                            class="w-12 h-12 flex items-center justify-center rounded-2xl text-primary  transition-colors duration-200">
+                                            <span class="material-symbols-outlined">route</span>
+                                        </div>
+                                        <div class="text-left">
+                                            <span
+                                                class="block text-lg font-bold text-gray-800 dark:text-gray-100">Circuito</span>
+                                            <span class="text-sm text-gray-500 dark:text-gray-400">Rutas
+                                                diseñadas para la
+                                                aventura</span>
+                                        </div>
+                                    </a> -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- <button
                                         class="px-8 py-3 bg-green-700 text-white text-lg font-semibold rounded-full shadow-md hover:bg-green-800 transition"
                                         (click)=" cargarDestinos(1); showOverlay();">
                                         {{ t('destinos-nacionales') }}
@@ -54,8 +129,7 @@
          hover:bg-[#e0a13a] transition
          [text-shadow:_0_2px_2px_rgba(0,0,0,0.50)]" (click)="showOverlay(); cargarDestinos(2)">
                                         {{ t('destinos-internacionales') }}
-                                    </button>
-                                </div>
+                                    </button> -->
                             </div>
                         </ng-container>
 
