--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -21,13 +21,13 @@
             class="bg-card w-full max-w-360 overflow-hidden border-b sm:m-8 sm:mb-0 sm:rounded-t-xl sm:py-3 sm:shadow-2xl md:mx-8 md:mt-12 md:pb-3 md:pt-4">
             <div class="grid-cols-2 relative flex h-16 flex-0 flex-auto items-center px-4 md:px-6">
                 <!-- @if (!isScreenSmall) { -->
-                <div class="flex items-center gap-2">
+                <div class="flex items-center sm:gap-2">
                     <img src="assets/images/logos/trotapie.png" alt="Logo Trotapie" (click)="regresarInicio()"
                         class="h-auto w-32 sm:w-40 md:w-48 lg:w-56 p-1 cursor-pointer" />
                     <languages></languages>
                 </div>
                 <ng-container *transloco="let t">
-                    <button mat-stroked-button class=" ml-auto mr-2 flex items-center justify-end gap-2"
+                    <button mat-stroked-button class=" ml-auto flex items-center justify-end gap-2"
                         (click)="regresarInicio()">
                         <mat-icon class="icon-size-5" [svgIcon]="'heroicons_outline:home'"></mat-icon>{{ t('inicio') }}
                     </button>
