--- a/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
+++ b/src/app/components/inicio/seleccion-destino/seleccion-destino.component.html
@@ -19,9 +19,6 @@
         <div *ngIf="!mostrarInfo" class="min-h-full flex items-center justify-center">
             <div class="flex min-w-0 flex-auto flex-col mt-2 items-center justify-center h-full w-full">
                 <div class="relative flex justify-center items-center p-3 sm:p-5 md:p-8 w-full h-full">
-                    @if(heroCard.face === 'front'){
-
-                    }
                     <fuse-card class="flex flex-col max-w-xl w-full md:w-[600px] h-[70vh] sm:h-[80vh] md:h-[70vh]"
                         [flippable]="true" #heroCard>
 
@@ -46,7 +43,7 @@
                                 </div>
 
 
-                                <div class="absolute bottom-5 transform flex flex-col gap-4 z-[999]">
+                                <div class="absolute bottom-5 transform flex flex-col gap-4 z-20">
                                     <h1 class="text-2xl font-bold text-white tracking-tight"></h1>
 
                                     <div class="relative w-full mx-auto group">
