--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -397,7 +397,7 @@
           <mat-error>Password is required</mat-error>
         </mat-form-field>
 
-        <div class="mt-2 flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
+        <!-- <div class="mt-2 flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
           <mat-checkbox class="-ml-2" [color]="'primary'" [formControlName]="'rememberMe'">
             Remember me
           </mat-checkbox>
@@ -406,7 +406,7 @@
             [routerLink]="['/forgot-password']">
             Forgot password?
           </a>
-        </div>
+        </div> -->
 
         <button class="fuse-mat-button-large mt-6 w-full" mat-raised-button [color]="'primary'"
           [disabled]="signInForm.disabled" (click)="signIn()">
