--- a/src/app/components/admin/solicitudes-cotizacion/solicitudes-cotizacion.component.html
+++ b/src/app/components/admin/solicitudes-cotizacion/solicitudes-cotizacion.component.html
@@ -24,7 +24,7 @@
                 <!-- </div> -->
 
                 <!-- TABLE WRAPPER (SCROLL) -->
-                <div class="overflow-auto h-140 p-4">
+                <div class="overflow-auto h-140 px-4">
                     <table mat-table [dataSource]="dataSource" matSort class="pretty-table">
 
                         <!-- ID -->
@@ -39,7 +39,7 @@
                             <td mat-cell *matCellDef="let row">
                                 <div>
                                     <span class="cell-title">{{ row.cliente_nombre }}</span>
-                                    <span class="cell-subtitle">{{ row.cliente_email }}</span>
+                                    <!-- <span class="cell-subtitle">{{ row.cliente_email }}</span> -->
                                 </div>
                             </td>
                         </ng-container>
@@ -88,9 +88,9 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estatus </th>
                             <td mat-cell *matCellDef="let row">
                                 <span class="pill" [ngClass]="{
-            'pill-ok': (row.estatus_nombre || '').toUpperCase() === 'CONFIRMADA',
-            'pill-warn': (row.estatus_nombre || '').toUpperCase() === 'PENDIENTE',
-            'pill-danger': (row.estatus_nombre || '').toUpperCase() === 'CANCELADA'
+            'pill-ok': (row.estatus_nombre || '') === 'Cotizado',
+            'pill-warn': (row.estatus_nombre || '') === 'Nuevo',
+            'pill-danger': (row.estatus_nombre || '') === 'Cancelado'
           }">
                                     {{ row.estatus_nombre }}
                                 </span>
@@ -101,11 +101,11 @@
                         <ng-container matColumnDef="acciones">
                             <th mat-header-cell *matHeaderCellDef class="actions-col"> </th>
                             <td mat-cell *matCellDef="let row" class="actions-col">
-                                <button mat-icon-button [matMenuTriggerFor]="rowMenu" aria-label="Acciones">
-                                    <mat-icon>more_vert</mat-icon>
+                                <button mat-icon-button aria-label="Acciones" [matTooltip]="'Editar cotización'" [routerLink]="'/admin/edicion-cotizacion/' + row.id">
+                                    <mat-icon class="icon-size-7 " [svgIcon]="'heroicons_outline:pencil-square'"></mat-icon>
                                 </button>
 
-                                <mat-menu #rowMenu="matMenu">
+                                <!-- <mat-menu #rowMenu="matMenu">
                                     <button mat-menu-item (click)="onView(row)">
                                         <mat-icon>visibility</mat-icon>
                                         <span>Ver</span>
@@ -118,7 +118,7 @@
                                         <mat-icon>delete</mat-icon>
                                         <span>Eliminar</span>
                                     </button>
-                                </mat-menu>
+                                </mat-menu> -->
                             </td>
                         </ng-container>
 
